Fix top menu help icon not showing modals. Fix specific bug scenario in minesweeper. Fix versions modal opening.

--- a/index.css
+++ b/index.css
@@ -446,6 +446,12 @@ nav ul li a {
   display: block;
 }
 
+nav ul li:hover {
+  div.help-icon {
+    opacity: 1;
+  }
+}
+
 nav ul li a:hover {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1), inset 0 0 1px rgba(255, 255, 255, 0.6);
   background: rgba(255, 255, 255, 0.1);
